<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerAddressTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_address_title"
            android:textColor="@color/customerFieldsTitle"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/customerEditAddress"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerEditAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_label"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerCep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textColor="@color/customerFields"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/customerAddressTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/customerAddressLine"
            style="@style/Separator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/customerCep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerFreightTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/freight_label"
            android:textColor="@color/customerFieldsTitle"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="200dp"
            app:layout_constraintTop_toBottomOf="@+id/customerAddressLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerPostTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/post_offices"
            android:textColor="@color/customerFields"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/customerFreightTitle"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerFreightPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="R$ 10,00"
            android:textStyle="bold"
            android:textColor="@color/customerFields"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@+id/customerFreightTitle"
            app:layout_constraintStart_toEndOf="@+id/customerPostTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/customerFreightLine"
            style="@style/Separator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerPostTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerPaymentTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_title"
            android:textColor="@color/customerFieldsTitle"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@+id/customerFreightLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/customerEditPayment"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerEditPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_label"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerFreightLine"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@color/customerFields"
            android:textSize="@dimen/size_text_game_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/customerPaymentTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/customerCardType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:textColor="@color/customerFieldsTitle"
            android:textSize="@dimen/app_font_size" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/customerCardNumber"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="200dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>