<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gamePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_title_actionbar"
                android:textColor="@color/colorAccent"
                tools:text="R$ 199,00"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toStartOf="@+id/gameAddToCart"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/freightImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_delivery"
                app:layout_constraintTop_toBottomOf="@+id/gamePrice"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:ellipsize="end"
                android:visibility="invisible"
                android:textSize="@dimen/size_text_game_title"
                android:text="@string/freight_label"
                android:textColor="@color/freightText"
                app:layout_constraintStart_toEndOf="@+id/freightImage"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/gamePrice"
                android:id="@+id/gameFreightTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gameFreightPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:visibility="invisible"
                android:textSize="@dimen/size_text_game_title"
                android:text="@string/freight_price"
                android:textColor="#666666"
                app:layout_constraintStart_toEndOf="@+id/gameFreightTitle"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/gamePrice"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gameAddToCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_button"
                android:text="@string/add_to_cart"
                android:textSize="@dimen/app_font_size"
                android:textColor="@android:color/white"
                android:padding="2dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="180dp"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.bottomnavigation.BottomNavigationView>